// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Price should handle props 1`] = `
<div>
  <span
    class="root test-class crossed-out"
    data-testid="price"
  >
    $ 1 234 567,89
  </span>
</div>
`;

exports[`Price should renders correctly 1`] = `
<div>
  <span
    class="root"
    data-testid="price"
  >
    123,45 ₽
  </span>
</div>
`;
